# Esp32MidiPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  admin.cpp  admin.h  bspmyauth.h  defaultTests.cpp  defaults.cpp  defaults.h  freeChars.md  interface.cpp  interface.h  main.cpp  main.h  midiInterface.cpp  midiInterface.h  parser1.cpp  parser1.h  parser2.cpp  parser2.h  platformio.ini  settings.h  song.cpp  song.h  songUtil.cpp  songUtil.h  strMidiUtil.cpp  strMidiUtil.h  types.h  wifictrl.h
src/: admin.h  arduinoMidiAdapter.hpp  arduinoTestOutAdapter.hpp  bspmyauth.h  bspmysettings.h  defaults.cpp  defaults.h  interface.cpp  interface.h  main.cpp  main.h  midiInterface.h  parser1.cpp  parser2.cpp  projektionFXIntigration.hpp  settings.h  song.cpp  song.h  songUtil.cpp  strMidiUtil.h  types.h  wifictrl.h
src/core/: fxHandler.hpp  midiHandler.hpp  parsers.cpp  parsers.hpp  projektionMidi.cpp  projektionMidi.hpp  stringTextWalker.cpp  stringTextWalker.hpp  textWalker.hpp  textWalkerUtil.cpp  textWalkerUtil.hpp  wdhTextWalker.cpp  wdhTextWalker.hpp
src/core/test/: bufferTests.hpp  limitTests.hpp  midiTestUtil.hpp  parserUtilTests.hpp  projektionMidiTestUtil.hpp  projektionMidiTests.hpp  segmentationTests.hpp  stdTestOut.hpp  stringTextWalkerTests.hpp  testUtil.hpp  tests.hpp  textWalkerTestUtil.hpp  textWalkerUtilTests.hpp  wdhTextWalkerTests.hpp
